--- a/index.html
+++ b/index.html
@@ -15,33 +15,32 @@
   <body>
       
     <!-- Inicio de la cabecera -->
-<div class="container-fluid">
-    <div class="row">
-        <header class="col-12 d-flex flex-column flex-nowrap justify-content-center">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-center p-2">
+    <header class="col-12 d-flex flex-column flex-nowrap justify-content-center">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-center p-2">
+            <div class="container-fluid">
                 <div id="logo">
                     <img src="./assets/logo.png"/>
                 </div>                  
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                      <li class="nav-item">
+                <div class="collapse navbar-collapse justify-content-around" id="navbarSupportedContent">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
                         <a href="./index.html" class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
+                        </li>
+                        <li class="nav-item">
                         <a href="./experience.html" class="nav-link" href="#">Experience</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="./portfolio.html" class="nav-link disabled">Portfolio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="./blog.html" class="nav-link disabled">Blog</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="./contact.html" class="nav-link disabled">Contact</a>
-                      </li>
+                        </li>
+                        <li class="nav-item">
+                        <a href="./portfolio.html" class="nav-link">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                        <a href="./blog.html" class="nav-link">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                        <a href="./contact.html" class="nav-link">Contact</a>
+                        </li>
                     </ul>
                     
                     <div id="social-media">
@@ -65,26 +64,29 @@
                             <p>Instagram</p>
                         </div>
                     </div>
-                  </div>
-              </nav>
-        </header>
-    </div>
+                    </div>
+                </nav>
+            </div>
+    </header>
     <!-- Fin de la cabecera -->
 
     <!-- Inicio contenido principal -->
+<div class="container-fluid">
     <div class="row">
-        <section id="main" class="col-12 d-flex flex-column flex-nowrap justify-content-center align-content-center align-items-center mb-2">
-            <div class="content text-center mb-2 mt-2">
-                <h1>Frontend Developer</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Dicta deserunt praesentium, commodi quaerat ipsum aliquam, 
-                    laudantium minus alias quos id sapiente? Nulla velit perferendis 
-                    aliquam modi veritatis ullam animi distinctio.
-                </p>
-            </div>
+        <section id="main" class="col-12 mb-2">
+            <div class="row justify-content-center align-content-center align-items-center">
+                <div class="col-lg-6 content text-center mb-2 mt-2">
+                    <h1>Frontend Developer</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Dicta deserunt praesentium, commodi quaerat ipsum aliquam, 
+                        laudantium minus alias quos id sapiente? Nulla velit perferendis 
+                        aliquam modi veritatis ullam animi distinctio.
+                    </p>
+                </div>
 
-            <div class="main-image">
-                <img src="./assets/main-image.png">
+                <div class="col-lg-6 main-image">
+                    <img src="./assets/main-image.png">
+                </div>
             </div>
         </section>
     </div>
@@ -92,51 +94,55 @@
 
     <!-- Inicio Experience -->
     <div class="row">
-        <section id="experience" class="col-12 d-flex flex-column flex-nowrap justify-content-center align-content-center">
-            <div class="content text-center">
-                <h2>Let's Work Together</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Dicta deserunt praesentium, commodi quaerat ipsum aliquam, 
-                    laudantium minus alias quos id sapiente? Nulla velit perferendis 
-                    aliquam modi veritatis ullam animi distinctio.
-                </p>
-                <button type="button" class="btn btn-light buttom-custom">About my approach</button>
-            </div>
-            <div id="carouselExampleControls" class="carousel slide carrousel" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="https://thumbs.dreamstime.com/b/sin-foto-ni-icono-de-imagen-en-blanco-cargar-im%C3%A1genes-o-falta-marca-no-disponible-pr%C3%B3xima-se%C3%B1al-silueta-naturaleza-simple-marco-215973362.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://thumbs.dreamstime.com/b/sin-foto-ni-icono-de-imagen-en-blanco-cargar-im%C3%A1genes-o-falta-marca-no-disponible-pr%C3%B3xima-se%C3%B1al-silueta-naturaleza-simple-marco-215973362.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://thumbs.dreamstime.com/b/sin-foto-ni-icono-de-imagen-en-blanco-cargar-im%C3%A1genes-o-falta-marca-no-disponible-pr%C3%B3xima-se%C3%B1al-silueta-naturaleza-simple-marco-215973362.jpg" class="d-block w-100" alt="...">
-                  </div>
+        <section id="experience" class="col-12">
+            <div class="row justify-content-center align-content-center">
+                <div class="col-lg-6 content text-center">
+                    <h2>Let's Work Together</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Dicta deserunt praesentium, commodi quaerat ipsum aliquam, 
+                        laudantium minus alias quos id sapiente? Nulla velit perferendis 
+                        aliquam modi veritatis ullam animi distinctio.
+                    </p>
+                    <button type="button" class="btn btn-light buttom-custom">About my approach</button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
+                <div id="carouselExampleControls" class="col-lg-6 carousel slide carrousel" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://thumbs.dreamstime.com/b/sin-foto-ni-icono-de-imagen-en-blanco-cargar-im%C3%A1genes-o-falta-marca-no-disponible-pr%C3%B3xima-se%C3%B1al-silueta-naturaleza-simple-marco-215973362.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://media.istockphoto.com/photos/yellow-color-texture-paper-background-background-pastel-colors-picture-id1006186824?k=20&m=1006186824&s=612x612&w=0&h=meNnzxtLSnuPemYVx1yYYuPAM06faMwUjSRJmrwp5a0=" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="http://www.clker.com/cliparts/W/E/N/g/W/5/fondox-net-fondo-color-verde-x-hi.png" class="d-block w-100">
+                    </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
         </section>
     </div>
     <!-- Fin Experience -->
 
     <!-- Inicio Skilss -->
     <div class="row">
-        <section id="skills" class="col-12 d-flex flex-column flex-nowrap justify-content-center align-content-center">
-            <div class="content text-center">
-                <h2>Skills</h2>
-                <img src="./assets/graphic.png">
-                <button type="button" class="btn btn-light buttom-custom">My portfolio</button>
-            </div>
-            <div class="videos">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/R8lHaEZYpCU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <section id="skills" class="col-12">
+            <div class="row justify-content-center align-content-center">
+                <div class="col-lg-6 content text-center">
+                    <h2>Skills</h2>
+                    <img src="./assets/graphic.png">
+                    <button type="button" class="btn btn-light buttom-custom">My portfolio</button>
+                </div>
+                <div class="col-lg-6 videos">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/R8lHaEZYpCU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
         </section>
     </div>
@@ -144,31 +150,33 @@
 
     <!-- Inicio Contact -->
     <div class="row">
-        <section id="contact" class="col-12 d-flex flex-column flex-nowrap justify-content-center align-content-center align-items-md-center">
-            <div class="content text-center">
-                <form action="" class="mb-2">
-                    <div class="mb-3">
-                        <label for="inputName" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="inputName" aria-describedby="name">
-                    </div>
-                    <div class="mb-3">
-                        <label for="inputLastName" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" id="inputLastName" aria-describedby="lastname">
-                    </div>
-                    <div class="mb-3">
-                      <label for="inputEmail" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="inputEmail" aria-describedby="email">
-                    </div>
-                    <div class="mb-3">
-                        <label for="formControlTextarea" class="form-label">Message</label>
-                        <textarea class="form-control" id="formControlTextarea" rows="3"></textarea>
-                      </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                  </form>
-            </div>
+        <section id="contact" class="col-12">
+            <div class="row justify-content-center align-content-center">
+                <div class="col-lg-6 content text-center mt-2">
+                    <form action="" class="mb-2">
+                        <div class="mb-3">
+                            <label for="inputName" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="inputName" aria-describedby="name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="inputLastName" class="form-label">Last Name</label>
+                            <input type="text" class="form-control" id="inputLastName" aria-describedby="lastname">
+                        </div>
+                        <div class="mb-3">
+                        <label for="inputEmail" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="inputEmail" aria-describedby="email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="formControlTextarea" class="form-label">Message</label>
+                            <textarea class="form-control" id="formControlTextarea" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send Message</button>
+                    </form>
+                </div>
 
-            <div id="location">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15930.586918561894!2d-76.5455461!3d3.4358476!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd88e534efc39f505!2sParque%20Del%20Perro!5e0!3m2!1ses!2sco!4v1586555005798!5m2!1ses!2sco" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <div id="location" class="col-lg-6">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15930.586918561894!2d-76.5455461!3d3.4358476!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd88e534efc39f505!2sParque%20Del%20Perro!5e0!3m2!1ses!2sco!4v1586555005798!5m2!1ses!2sco" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
             </div>
         </section>
     </div>
@@ -176,7 +184,7 @@
 
     <!-- Inicio Footer -->
     <div class="row">
-        <footer class="col-12 bg-dark d-flex flex-column flex-nowrap justify-content-around align-content-center text-center">
+        <footer class="col-12 bg-dark justify-content-around align-content-center text-center">
             <p>&copy; David Muñoz Barco - 2022</p>
             <p>(+57)3137438968</p>
             <p>david.f.do@hotmail.com</p>
