--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portafolio web y blog acerca del desarrollo web">
+    <meta name="description" content="Desarrollador web ofrece sus servicios para la creación de tu página web, te muestra sus proyectos web y experiencias con diferentes tecnologías">
     <meta name="keywords" content="HTML, CSS, SASS, BLOG, WEB">
     <!-- <link rel="stylesheet" href="./styles/styles.css"> -->
     <!-- <link rel="stylesheet" href="./styles/styles2.css"> -->
