--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Blog para aprender desarrollo web, artículos sobre programación, tecnologías de punta, todo sobre el desarrollo web">
+    <meta name="keywords" content="HTML, CSS, SASS, BLOG, WEB">
      <!-- <link rel="stylesheet" href="./styles/styles.css"> -->
     <!-- <link rel="stylesheet" href="./styles/styles2.css"> -->
     <!-- <link rel="stylesheet" href="./styles/styles3.css"> -->
