--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, SASS, BLOG, WEB">
+    <meta name="description" content="Portafolio de proyectos web">
     <!-- <link rel="stylesheet" href="./styles/styles.css"> -->
     <!-- <link rel="stylesheet" href="./styles/styles2.css"> -->
     <!-- <link rel="stylesheet" href="./styles/styles3.css"> -->
