--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
                             <label for="message">Message</label><br>
                             <textarea name="" id="" cols="20" rows="10" placeholder="Message"></textarea>
                             <br><br>
-                            <input type="submit" value="Send Message" class="btn btn-primary">
+                            <input type="submit" value="Send Message" class="btn btn-outline-light">
                         </form>
                     </div>
                 </div>
